oidc.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
      - args:
        - --provider=oidc
        - --email-domain=*
        - --redirect-url=https://oidc.example.com
        - --oidc-issuer-url=https://xyz.okta.com/oauth2/default
        - --upstream=https://oidc.example.com
        - --cookie-secure=true
        - --cookie-httponly=false
        - --cookie-domain=oidc.example.com
        - --whitelist-domain=.example.com
        - --cookie-name=oidc.example.com
        - --cookie-secret=xxxxxxxxxx
        - --client-id=xxxxxxxxx
        - --client-secret=xxxxxxxxx
        - --skip-provider-button=true
        - --http-address=0.0.0.0:4180
        image: quay.io/pusher/oauth2_proxy:v5.0.0
        imagePullPolicy: Always
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: default
spec:
  ports:
  - name: http-proxy
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    k8s-app: oauth2-proxy
